[workspace]
resolver = "2"
members = [
    "lib",
    "vm-builders"
]

[workspace.dependencies]
# midnight ledger
midnight-base-crypto = { git = "https://github.com/input-output-hk/midnight-ledger-prototype" }
midnight-transient-crypto = { git = "https://github.com/input-output-hk/midnight-ledger-prototype", package = "midnight-transient-crypto" }
midnight-zswap = { git = "https://github.com/input-output-hk/midnight-ledger-prototype", features = ["offer-construction"] }
midnight-swap = { git = "https://github.com/input-output-hk/midnight-ledger-prototype", features = ["offer-construction"] }
midnight-onchain-runtime = { git = "https://github.com/input-output-hk/midnight-ledger-prototype", package = "midnight-onchain-runtime" }
midnight-ledger = { git = "https://github.com/input-output-hk/midnight-ledger-prototype", default-features = false, features = ["transaction-construction", "verifying", "serde", "transaction-semantics", "proving"] }

coin-structure = { git = "https://github.com/input-output-hk/midnight-ledger-prototype", package = "midnight-coin-structure" }

# other deps
rand = { version = "^0.8.4", features = ["getrandom"] }
rand_chacha = "^0.3.1"
tokio = { version = "1.41.0", features = ["rt", "macros"] }
hex = "0.4.3"

[patch.'https://github.com/input-output-hk/midnight-ledger-prototype']
midnight-ledger = { path = "../midnight-ledger-prototype/ledger" }
midnight-zswap = { path = "../midnight-ledger-prototype/zswap" }
midnight-base-crypto = { path = "../midnight-ledger-prototype/base-crypto" }
midnight-onchain-runtime = { path = "../midnight-ledger-prototype/onchain-runtime" }
midnight-onchain-state = { path = "../midnight-ledger-prototype/onchain-state" }
midnight-transient-crypto = { path = "../midnight-ledger-prototype/transient-crypto" }
coin-structure = { path = "../midnight-ledger-prototype/coin-structure", package = "midnight-coin-structure" }



[profile.release]
lto = true
opt-level = 's'
