[package]
name = "midnight-impact-rps-example"
version = "0.1.0"
edition = "2021"

[dependencies]
midnight-onchain-runtime = { workspace = true }
midnight-base-crypto = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
midnight-ledger = { workspace = true }
coin-structure = { workspace = true }
midnight-zswap = { workspace = true }
hex = "0.4.3"
const-hex = "1.14.0"

[dev-dependencies]
tokio = { version = "1.41.0", features = ["rt", "macros", "rt-multi-thread"] }
