[package]
name = "midnight-vm-builders"
version = "0.1.0"
authors = ["Enzo Cioppettini <48031343+ecioppettini@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.45"
wasm-bindgen-rayon = "1.2"

midnight-impact-rps-example = { path = "../lib" }
midnight-onchain-runtime = { workspace = true }
midnight-base-crypto = { workspace = true }
midnight-ledger = { workspace = true }
midnight-transient-crypto = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
hex = { workspace = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
tokio = { version = "1.41.0", features = ["rt", "macros", "net", "rt-multi-thread"] }
tracing = "0.1.40"
axum = "0.7.7"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }

[build-dependencies]
midnight-impact-rps-example = { path = "../lib" }
tokio = { workspace = true }
midnight-base-crypto = { workspace = true }
